--- a/style.css
+++ b/style.css
@@ -1,6 +1,28 @@
-body {
-    background-color: burlywood;
+* {
+    padding: 0;
+    margin: 0;
 }
+
+body {
+    background: linear-gradient(45deg, blue, rgb(0, 119, 255), rgb(0, 149, 255)) no-repeat;
+    background-size: 300% 300%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    animation: bgMove 3s linear alternate infinite;
+}
+
+@keyframes bgMove {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    100% {
+        background-position: 100% 50%;
+    }
+}
+
 
 h2 {
     color: #fff;
